--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "skipLibCheck": true,
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "strictPropertyInitialization": false,
+    "noImplicitAny": false,
+    "exactOptionalPropertyTypes": false,
     "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
@@ -18,9 +21,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve"
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+      "src/Cartzilla"
   ]
 }
